LUC070-80-Java17 - removed Jenkins error and removed testcontainer deprecation